--- a/config/main.yml
+++ b/config/main.yml
@@ -5,3 +5,6 @@ port: 3000
 
 ## The title that will be displayed in the top of the menu
 title: "OpenWebControl"
+
+## The password to get in the Admin panel
+password: "change-me"
