--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/OpenWebControl/OpenWebControl#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "mysql": "^2.18.1",
+    "promise-mysql": "^5.0.4"
   }
 }
