--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/OpenWebControl/OpenWebControl#readme",
   "dependencies": {
+    "chalk": "^4.1.2",
     "express": "^4.17.1",
     "js-yaml": "^4.1.0",
     "mysql": "^2.18.1",
