--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/OpenWebControl/OpenWebControl#readme",
   "dependencies": {
     "chalk": "^4.1.2",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "js-yaml": "^4.1.0",
