Add expire time to config

--- a/config/main.yml
+++ b/config/main.yml
@@ -14,3 +14,7 @@ url: 'https://panel.openwebcontrol.com'
 
 ## The theme of the dashboard
 theme: "blank"
+
+## When a session expires. In milliseconds
+## For debugging, we set it to 2 minutes
+expire: 120000
