--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon -i data"
   },
   "repository": {
     "type": "git",
@@ -23,11 +23,12 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "cookie-parser": "^1.4.6",
+    "diskdb": "^0.1.17",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "js-yaml": "^4.1.0",
     "md5": "^2.3.0",
-    "mysql": "^2.18.1",
+    "node-fetch": "^2.6.7",
     "promise-mysql": "^5.0.4"
   }
 }
